# MAGI

./: .env.development  .gitignore  README.md  docker-compose.yml  llm_client.py  main.py  requirements.txt  setup.py
backend/: Dockerfile  requirements.txt
backend/config/: celery.py  urls.py
backend/core/: apps.py  models.py  signals.py  views.py
backend/llm/: base.py
backend/requirements/: base.txt
backend/scripts/: init_db.sh
backend/tasks/: agent_dispatcher.py  agent_tasks.py  dispatcher.py
backend/utils/: redis_channels.py  redis_client.py
demo0/: Dockerfile  docker-compose.yml  memories.md  nginx.conf  requirements.txt  setup.py
demo0/examples/: basic_usage.py
demo0/magi/: core.py
deployment/backend/: development.py
deployment/nginx/: nginx.conf
examples/eliza_service/: README.md  app.py  celery_app.py  client_test.py  extract_user_input.py  (+1 more)
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
gateway/: .env.test  Dockerfile  PROTOCOL.md  README.md  __init__.py  app_state.py  client.py  config.py  dummy_server.py  main.py  pyproject.toml  requirements.txt  websocket_manager.py
gateway/app/: main.py
gateway/config/: settings.py
gateway/middleware/: auth.py
gateway/redis_handlers/: __init__.py  consumer.py  producer.py  subscriber.py
gateway/routers/: websocket.py
gateway/services/: result_pusher.py  websocket_manager.py
gateway/tests/: conftest.py  test_auth.py  test_message_handlers.py  test_redis_handlers.py  test_websocket.py
gateway/utils/: auth.py  redis_channels.py
magi/: client.py
(+59 files in other folders)
